feat(06-01): add GrantStore.listByObject and RbacService REST API support methods
- GrantStore.listByObject(objectType, objectPath): scan-and-filter all grants
  matching given object type and path (consistent with listByRole pattern)
- RbacService.listMembersByRole(roleId): delegates to MembershipStore.listByRole
- RbacService.listGrantsByObject(objectType, objectPath): delegates to GrantStore.listByObject
- Both wrapper methods placed in new 'REST API support' section in RbacService